frontend/src/containers/NewsFeedView.css
.parentBox{
width: 100%;
}


.childBox{
  width: 33%; height: 400px; float: left; background: green;
}


.cardAlign{
  position: absolute;

  top: 50%;
  left:43%;
  font-size: 18px;
  transform: translateY(-50%);
}

.shadowBox{
  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
}


.topCard {
  position: relative;

  background: #FFFFFF;

  width:215px;
  padding:30px;
  height:70px;

  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
}



.share{



  position: absolute;

  top: 35%;
  left:20%;



}



/* .share{

  width:60px;
  height:60px;
  background:#ff9100;
  position: absolute;

  top: 15%;
  left:5%;

  z-index:999;
  text-align:center;
  overflow:hidden;
  line-height:65px;
  font-size:1.5em;
  color:#fff;
  -moz-box-shadow: 0px 3px 3px rgba(0,0,0,.5);
-webkit-box-shadow: 0px 3px 9px rgba(0,0,0,.5);
box-shadow: 0px 3px 9px rgba(0,0,0,.5);
  border-radius:50px;

} */

.bottomRightCircle {
  position: absolute;
  bottom: 0;
  right: 0;
  margin-top: 50;
  width: 50px;
  height: 50px;
  background-color: #0069FF;

       border-radius: 100px 0 0 0;
-moz-border-radius: 100px 0 0 0;
-webkit-border-radius: 100px 0 0 0;

 }

.circle {
  background: #456BD9;
  border-radius: 50%;
  color: #fff;
  height: 5em;
  position: relative;
  width: 5em;
}

.circle-icon {
  fill: currentColor;
  height: 50%;
  left: 50%;
  position: absolute;
  stroke: currentColor;
  stroke-width: 0;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 50%;
}
/*
.wrap {
  position: relative;
  margin: 10em auto 30em;
  max-width: 960px;
  overscroll-behavior: contain;
} */

.headers {
  top: 100px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1;

}

.scroller {
  overflow: auto;
  display: flex;

}


.avatar {
  vertical-align: middle;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: 3px solid #FFFFFF;
}
.personName {
  color: rgb(20, 24, 35);
  font-size: 14px;
  font-weight: normal;
  height: 19px;
  line-height: 19.3199996948242px;
  margin-left: 15px;
  overflow-x: hidden;
  overflow-y: hidden;


  padding-top: 0px;
  text-align: left;
  width: 86px;
}
.fb-group-date {
  color: rgb(145, 151, 163);

  font-size: 14px;
  font-weight: normal;
  height: auto;
  line-height: 16.0799999237061px;


  width: auto;

}


.sectionTitles{
  /* Section Title */

font-family: 'Montserrat';
font-style: normal;
font-weight: 500;
font-size: 17px;
line-height: 21px;
/* identical to box height */


/* Catalina Blue */

color: #203758;
}


.avatarPic {

    font-size: 12;


}

.morePeopleHeader{
  text-align: center;
  margin-top: 10px;
  font-size: 20px;
  height:75px;
  /* background-color: red; */
  padding-top: 25px;
  max-height: 450px;
  /* color:#1890ff; */

}


.usertext {
  color: rgb(20, 24, 35);

  font-size: 15px;
  font-weight: normal;
  height: auto;
  line-height: 19.3199996948242px;
  margin-bottom: 0px;
  margin-left: 10px;
  margin-right: 0px;
  margin-top: 50px;
  text-align: left;
  width: auto;
  word-wrap: break-word;

}







































.newsfeed {
margin-left: 10px;

  minHeight: 0px;
  /* overflow:auto; */
  /* background-color: red; */
}


.suggestFriendsCSS {

  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
  background-color: #ffffff;

  width: 200px;
  height: 150px;
}


.createEventCSS{
  border-radius: 25px;

  height: '500px';
  width: '300px';
  position: 'relative';
  right:'100px';
}

